feat: nutrion facts and recommendations
